# nbody_compute

./: CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt
app/inc/: callback_handle.h  orbit_camera.h  shader.h
app/shaders/: nbody_c.glsl  particle_f.glsl  particle_v.glsl
app/src/: callback_handle.cpp  camera.cpp  main.cpp  orbit_camera.cpp  shader.cpp
